--- a/langchain/pyproject.toml
+++ b/langchain/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "langchain-ollama>=1.0.0",
     "langchain-openai>=1.0.1",
+    "ollama>=0.6.0",
     "python-dotenv>=1.1.1",
 ]
